# findom

./: .gitignore  AGENTS.md  CHANGELOG.md  PROJECT_STATUS.md  README.md  pyproject.toml  pytest.ini
.codex/: config.toml
cal/: capture_har.py  extract_har.py  smoke.py
configs/research/: mechanism.yaml
configs/research/targets/: cal_digital.yaml  discount.yaml
docs/: PROGRESS_LOG_V1.md  PROJECT_CORE.md  cal_explorer.md  research_explorer.md  zenmoney_tools_review.md
docs/sheets_design/: ledger_first.json  ledger_first.md
findom/: __init__.py  __main__.py  cli.py
findom.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
gsheets_toolkit/: __init__.py  client.py  models.py  ops.py  plan.py  schema.py  upsert.py  utils.py  values.py
scripts/: create_log_table.py  create_spreadsheet.py  run_sync.py  sync_log_to_sheet.py
scripts/sources/: __init__.py  registry.py
tables/: log_schema.py  spreadsheet_builder.py
tables/schema/: accounts_schema.md  idempotency_rules.md  movements_schema.md
tables/schemas/: log_schema.py  showcase_ledger_first.json
tests/: test_amount_normalization.py  test_locale_aware_numeric_serialization.py  test_spreadsheet_builder_typed_demo.py
tests/fixtures/: movements_sample.json
tests/research/: test_research_config.py  test_research_redaction.py
tools/: __init__.py  analyze_network_log.py  cal_explorer.py
tools/connectors/: __init__.py  run_sync.py
tools/research/: __init__.py  artifacts.py  config.py  redaction.py  run_explorer.py  runtime.py
tools/status/: update_status.py
utils/: har.py  redact.py
(+45 files in other folders)
